add facebook and google login button

--- a/Frontend/Login-page/index.html
+++ b/Frontend/Login-page/index.html
@@ -38,6 +38,17 @@
 								<input type="submit">
 							</form>
 						</div>
+						<div class="logins">
+							<h4>... or login with</h4>
+							<div class="login-options">
+								<button>
+									<i class="fa fa-google-plus"></i>Google
+								</button>
+								<button>
+									<i class="fa fa-facebook"></i>Facebook
+								</button>
+							</div>
+						</div>
 					</div>
 					<div class="vertical-rule">	
 					</div>
@@ -65,6 +76,5 @@
 				</main>
 			</section>	
 		</section>
-		<script src="script.js"></script>
 	</body>
 </html>
