added initial left nav

--- a/Frontend/Dashboard/index.html
+++ b/Frontend/Dashboard/index.html
@@ -4,6 +4,7 @@
 	<title>Dashboard</title>
 	<link rel="stylesheet" href="styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<title>Login</title>
 </head>
@@ -16,10 +17,51 @@
 				<form method="post" class="search-bar"><input type="text"></form>
 			</div>
 		</header>	
-		<nav> 
-		</nav>
+		<main> 
+			<nav class="left-nav"> 
+				<ul class="main-nav">
+					<li class="nav-head">
+						MAIN 
+					</li>
+					<li class="nav-item"> 
+						<i class="fa fa-user-circle-o" aria-hidden="true"></i>
+						<div> Overview </div>
+					</li>
+					<li class="nav-item"> 
+						<i class="fa fa-rss" aria-hidden="true"></i>
+						<div> Activity </div>
+					</li>
+					<li class="nav-item">
+						<i class="fa fa-heart-o" aria-hidden="true"></i>
+						<div> Favourites </div>	
+					</li>
+				</ul>
+				<ul class="filter-nav">
+				<li class="nav-head">
+						<div>FILTER</div>
+					</li> 
+					<li class="nav-item"> 
+						<i class="fa fa-star-half-o" aria-hidden="true"></i>
+						<div> Predictions </div>
+					</li>
+					<li class="nav-item"> 
+						<i class="fa fa-bar-chart-o" aria-hidden="true"></i>
+						<div> Bar Graph </div>
+					</li>
+					<li class="nav-item"> 
+						<i class="fa fa-pie-chart" aria-hidden="true"></i>
+						<div> Pie Chart </div>
+					</li>
+					<li class="nav-item">
+						<i class="fa fa-line-chart" aria-hidden="true"></i>
+						<div> Line Chart </div>	
+					</li>
+					
+				</ul>
+			</nav>
+			<section class="user-space">
+			</section>
+		</main>
 	</section>
-
-
 </body>
 </html>
