added links to left nav

--- a/Frontend/Dashboard/index.html
+++ b/Frontend/Dashboard/index.html
@@ -24,37 +24,51 @@
 						MAIN 
 					</li>
 					<li class="nav-item"> 
-						<i class="fa fa-user-circle-o" aria-hidden="true"></i>
-						<div> Overview </div>
+						<a href="#" class="nav-link">
+							<i class="fa fa-user-circle-o" aria-hidden="true"></i>
+							<div> Overview </div>
+						</a>	
 					</li>
 					<li class="nav-item"> 
-						<i class="fa fa-rss" aria-hidden="true"></i>
-						<div> Activity </div>
+						<a href="#" class="nav-link">
+							<i class="fa fa-rss" aria-hidden="true"></i>
+							<div> Activity </div>
+						</a>
 					</li>
 					<li class="nav-item">
-						<i class="fa fa-heart-o" aria-hidden="true"></i>
-						<div> Favourites </div>	
+						<a href="#" class="nav-link">
+							<i class="fa fa-heart-o" aria-hidden="true"></i>
+							<div> Favourites </div>	
+						</a>
 					</li>
 				</ul>
 				<ul class="filter-nav">
-				<li class="nav-head">
+					<li class="nav-head">
 						<div>FILTER</div>
 					</li> 
 					<li class="nav-item"> 
-						<i class="fa fa-star-half-o" aria-hidden="true"></i>
-						<div> Predictions </div>
+						<a href="#" class="nav-link">
+							<i class="fa fa-star-half-o" aria-hidden="true"></i>
+							<div> Predictions </div>
+						</a>
 					</li>
 					<li class="nav-item"> 
-						<i class="fa fa-bar-chart-o" aria-hidden="true"></i>
-						<div> Bar Graph </div>
+						<a href="#" class="nav-link">
+							<i class="fa fa-bar-chart-o" aria-hidden="true"></i>
+							<div> Bar Graph </div>
+						</a>	
 					</li>
 					<li class="nav-item"> 
-						<i class="fa fa-pie-chart" aria-hidden="true"></i>
-						<div> Pie Chart </div>
+						<a href="#" class="nav-link">
+							<i class="fa fa-pie-chart" aria-hidden="true"></i>
+							<div> Pie Chart </div>
+						</a>
 					</li>
 					<li class="nav-item">
-						<i class="fa fa-line-chart" aria-hidden="true"></i>
-						<div> Line Chart </div>	
+						<a href="#" class="nav-link">
+							<i class="fa fa-line-chart" aria-hidden="true"></i>
+							<div> Line Chart </div>	
+						</a>
 					</li>
 					
 				</ul>
