Added line graphs and pie chart with sample data

--- a/Frontend/Dashboard/index.html
+++ b/Frontend/Dashboard/index.html
@@ -74,8 +74,24 @@
 				</ul>
 			</nav>
 			<section class="user-space">
+				<div class="user-space-head"> Overview </div>
+				<div class="graph-data">
+					<div class="line-graph">
+						<canvas id="chart"></canvas>
+					</div>
+					<div class="pie-chart">
+						<div>
+							<canvas id="pie-chart1"></canvas>
+						</div>
+						<div>
+							<canvas id="pie-chart2"></canvas>
+						</div>
+					</div>
+				</div>
 			</section>
 		</main>
 	</section>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js" /></script>
+	<script src="js/script.js"></script>
 </body>
 </html>
