complete quiz portal static architecture

--- a/Frontend/Quiz-Portal/index.html
+++ b/Frontend/Quiz-Portal/index.html
@@ -20,21 +20,114 @@
             <div class="right-navigate navigate">
                 <span><i class="fa fa-chevron-right"></i></span>
             </div>
-        </div>
+            <div class="main-container">
+                <div class="quiz-portal">
+                    <div class="quiz-head">
+                        <div class="page-heading">
+                            <b>Q</b>uiz Portal
+                        </div>
+                        <div class="page-description">
+                            A unique way to test your skills and aptitude
+                        </div>
+                    </div>
 
-        <div class="quiz-portal">
-            <div class="quiz-head">
-                <div class="page-heading">
-                    <b>Q</b>uiz Portal
+                    <div class="question-containers">
+                        <div class="question-container" data-question-no="1">
+                            <div class="question">
+                                <div class="question-title">
+                                    Question No : 01
+                                </div>
+                                <div class="question-description">
+                                    Who discovered gravity ?
+                                </div>
+                            </div>
+                            <div class="option-container"  data-question-no="1">
+                                <div class="options" data-option="A">
+                                    <div class="option-text">
+                                        <div class="check-box"  data-option="A" data-question="1">
+                                        </div>
+                                        <span class="option-label"><span>A.</span> Sir Issac Newton</span>
+                                    </div>
+                                </div>
+                                <div class="options" data-option="B">
+                                    <div class="option-text">
+                                        <div class="check-box"  data-option="B" data-question="1">
+                                        </div>
+                                        <span class="option-label"><span>B.</span> Albert Einstein</span>
+                                    </div>
+                                </div>
+                                <div class="options" data-option="C">
+                                    <div class="option-text">
+                                        <div class="check-box"  data-option="C" data-question="1">
+                                        </div>
+                                        <span class="option-label"><span>C.</span> Neils Bohr</span>
+                                    </div>
+                                </div>
+                                <div class="options" data-option="D">
+                                    <div class="option-text">
+                                        <div class="check-box"  data-option="D" data-question="1">
+                                        </div>
+                                        <span class="option-label"><span>D.</span> Aryabhatta</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+                        <div class="question-container" data-question-no="2">
+                            <div class="question">
+                                <div class="question-title">
+                                    Question No : 02
+                                </div>
+                                <div class="question-description">
+
+                                </div>
+                            </div>
+                            <div class="option-container"  data-question-no="2">
+                                <div class="options" data-option="A">
+                                    <div class="option-text">
+                                        <div class="check-box" data-option="A" data-question="2">
+                                        </div>
+                                        <span class="option-label"><span>A.</span> Option A</span>
+                                    </div>
+                                </div>
+                                <div class="options" data-option="B">
+                                    <div class="option-text">
+                                        <div class="check-box" data-option="B" data-question="2">
+                                        </div>
+                                        <span class="option-label"><span>A.</span> Option A</span>
+                                    </div>
+                                </div>
+                                <div class="options" data-option="C">
+                                    <div class="option-text">
+                                        <div class="check-box" data-option="D" data-question="2">
+                                        </div>
+                                        <span class="option-label"><span>A.</span> Option A</span>
+                                    </div>
+                                </div>
+                                <div class="options" data-option="D">
+                                    <div class="option-text">
+                                        <div class="check-box" data-option="D" data-question="2">
+                                        </div>
+                                        <span class="option-label"><span>A.</span> Option A</span>
+                                    </div>
+                                </div>
+                            </div>
+                    </div>
+
                 </div>
-                <div class="page-description">
-                    A unique way to test your skills and random shit !
+
+                <div class="submit-button">
+                    <button>
+                        Submit Responses
+                    </button>
                 </div>
             </div>
 
-            <div class="question-container">
-            </div>
+
         </div>
+
+
         <script src="script.js"></script>
     </body>
 </html>
